Slight modifications, fixed website "logo" visibility in other tabs

--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ box-shadow: 0px 0px 10px 3px rgba(71,220,173,0.02);
 
 #sticky-nav-bar {
     height: 75px;
-    background-color: #0c0c0c;
+    background: #0c0c0c;
     color: #ffffff;
     display: flex;
     flex-direction: row;
